<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enjoy_mth">If you enjoy using Pet please help us out by taking a moment to rate/review the app. Thank you for your support!</string>
    <string name="rate_mth">Rate Pet app</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="no_thanks_done">No thanks/Already have</string>
    <string name="rating_button">Rate</string>
    <string name="rating_button_details">Please, rate this app</string>
    <string name="more_apps">More apps</string>
    <string name="more_apps_details">Find and download more apps</string>
    <string name="app_name">Puppy Pet</string>
    <string name="skin_name_neko">Kote</string>
    <string name="skin_name_or">Orange Kote</string>
    <string name="skin_name_usagi">Hamster</string>
    <string name="skin_name_ham">Rabbit</string>
    <string name="skin_name_inu">Dog</string>
    <string name="notification_enable">Pet is running.</string>
    <string name="notification_disable">Pet is sleeping.</string>
    <string name="pref_cat_motion">Settings</string>
    <string name="pref_motion_enable_title">Enable a pet</string>
    <string name="pref_motion_enable_summary">To pet, or not to pet.</string>
    <string name="pref_motion_behaviour_title">Behaviour</string>
    <string name="pref_motion_behaviour_summary">Behaviour of pet</string>
    <string name="pref_motion_behaviour_default">closer</string>
    <string name="pref_motion_transparency_title">Transparency</string>
    <string name="pref_motion_transparency_summary">Transparency of pet</string>
    <string name="pref_motion_skin_title">Skin</string>
    <string name="pref_motion_skin_summary">Skin of pet</string>
    <string name="pref_skin_dialog_title">Skin</string>
    <string name="pref_skin_search_button">OK</string>
    <string name="msg_skin_load_failed">Failed to load skin.</string>
    <string name="msg_market_not_found">Market application is not found.</string>
    <string name="skin_search_uri">market://search?q=</string>
    <string name="msg_usage">Choose skin from Pet settings.</string>
    <string name="msg_no_package">"This is skin for Pet.
To use this, install Pet and choose skin."</string>
    <string name="msg_unexpected_err">Something is wrong.</string>
</resources>
